[metadata]
description-file = README.md

[flake8]
max-complexity = 10
exclude = .git,.tox,__pycache__,pyenv,build,dist
# set to true to check all ignored errors
disable_noqa = False

# adaptions for black
max-line-length = 88
extend-ignore = E203

[mypy]
ignore_missing_imports = True
install_types = on
non_interactive = on
files = osmapi/*.py